tasks/templates/css/lu5-hljs-theme.css
@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap');

pre code.hljs {
  display: block;
  overflow-x: auto;
  padding: 1em;

  font-family: "Source Code Pro", monospace;
  font-optical-sizing: auto;
  font-weight: 400;
  font-style: normal;
  border-radius: 8px;
}
code.hljs {
  padding: 3px 5px
}
/*!
  Theme: a11y-dark
  Author: @ericwbailey
  Maintainer: @ericwbailey

  Based on the Tomorrow Night Eighties theme: https://github.com/isagalaev/highlight.js/blob/master/src/styles/tomorrow-night-eighties.css
*/
/* 
--dark: #461164;
--primary: #AA36EF;
--lighter: #d49af7;
--white: #efefef; */

.hljs {
  background: #dfd4ff;
  color: #123422
}
/* Comment */
.hljs-comment,
.hljs-quote {
  color: #8575bf
}
/* Red */
.hljs-variable,
.hljs-template-variable,
.hljs-tag,
.hljs-name,
.hljs-selector-id,
.hljs-selector-class,
.hljs-regexp,
.hljs-deletion {
  color: #AA36EF
}
/* Orange */
.hljs-number,
.hljs-built_in,
.hljs-literal,
.hljs-type,
.hljs-params,
.hljs-meta,
.hljs-link {
  color: #461164
}
/* Yellow */
.hljs-attribute {
  color: #551b93
}
/* Green */
.hljs-string,
.hljs-symbol,
.hljs-bullet,
.hljs-addition {
  color: #551b93
}
/* Blue */
.hljs-title,
.hljs-section {
  color: #9916cF
}
/* Purple */
.hljs-keyword,
.hljs-selector-tag {
  color: #551b93
}
.hljs-emphasis {
  font-style: italic
}
.hljs-strong {
  font-weight: bold
}
@media screen and (-ms-high-contrast: active) {
  .hljs-addition,
  .hljs-attribute,
  .hljs-built_in,
  .hljs-bullet,
  .hljs-comment,
  .hljs-link,
  .hljs-literal,
  .hljs-meta,
  .hljs-number,
  .hljs-params,
  .hljs-string,
  .hljs-symbol,
  .hljs-type,
  .hljs-quote {
    color: highlight
  }
  .hljs-keyword,
  .hljs-selector-tag {
    font-weight: bold
  }
}

